update about me

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Luana Martins"
+  name             : "Luana G. B. Martins"
   avatar           : "profile.png"
   bio              : "Working towards General AI through Deep Reinforcement Learning"
   location         : "Goias, Brazil"
