change location and email

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Luana G. B. Martins"
   avatar           : "profile.png"
   bio              : "Working towards General AI through Deep Reinforcement Learning"
-  location         : "Goias, Brazil"
+  location         : "Goiania, Goias, Brazil"
   employer         :
   pubmed           : 
   googlescholar    : 
